--- a/MinhaAgenda/app/src/main/res/values/strings.xml
+++ b/MinhaAgenda/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
-    <string name="app_name">MinhaAgenda</string>
+    <string name="app_name">Minha Agenda</string>
+    <string name="nome">Nome</string>
+    <string name="celular">Celular</string>
+    <string name="pessoal">Pessoal</string>
+    <string name="trabalho">Trabalho</string>
+    <string name="referencias">Referência</string>
+    <string name="salvar">Salvar</string>
+    <string name="lista">Lista de contatos</string>
+    <string name="voltar">Voltar</string>
+    <string name="pesquisae">Pesquisar</string>
+    <string name="error">Informe um valor.</string>
+
 </resources>
